playback message (when not logged in) works now. Playback shows pause button, but out of place (css issues)

--- a/carnatic/static/carnatic/css/main.less
+++ b/carnatic/static/carnatic/css/main.less
@@ -746,6 +746,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 				bottom: 3px;
 				left: 3px;
 				z-index: 4;
+				.player {
+					background: url("../img/playButton.png") 0 50% no-repeat;
+					padding-left: 38px;
+					padding-top: 10px;
+					padding-bottom: 11px;
+				}
 			}
 			#innerSummary { position: absolute; z-index: 3; display: table; width: 100%; height: 100%; }
 			#summaryBack {
